--October 27,2009--
- Restored previewer dockwidget (while retaining previewer tab for now).
  Previewer refresh button now asks the mainwindow to save any unsaved
  data so that the preview is up to date. Also added a 'Refresh Previewer'
  menubar item with a keyboard shortcut (Ctrl-F5 for now) that does the same.

--October 26,2009--
- Editor contents are now automagically saved on swapping files/tabs and
  on exit.

--October 19,2009--
- Metadata editor now loads properly (but still unable to save). Previewer is
  now in a tab of its own.

--October 18,2009--
- Selecting metadata now brings up the metadata editor GUI - but it doesn't
  really work.

--October 1,2009--
- Experimental separation of editor tree-widget into a QDockWidget. Still
  UGLY and BUGGY.

--September 26,2009--
- Package metadata file is now visible and editable in the editor.

--September 25, 2009--
- Fixed more editor issues : all tree widget entries are now correctly named
  and properly mapped to their respective files.

--September 23, 2009--
- Fixed clicking certain files in the editor component tree widget causing plasmate
  to crash. Issues remaining for editor:
    - File entries are not properly named in editor's project structure tree.
    - metadata.desktop is not currently editable (or visible).

--September 20, 2009--
- Editor component now makes a (buggy) attempt to load clicked project files
  with an editor kpart. Also fixed a bug causing editor kpart to
  not load the first time the editor component is loaded.

--September 19, 2009--
- Fixed previewer refresh code: Refreshing now properly reflects changes since previous
  refresh. Also fixed issue with refreshed plasmoid being smaller than original.

--September 12, 2009--
- Loading a project now also attempts to load a preview in previewer

--August 29, 2009--
- Modified the newSavePoint() method to prevent a crash when the user want to store his first 
  SavePoint, but then it discard the "new SavePoint" dialog.
